--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ CardInfoAPI/__pycache__/__init__.cpython-311.pyc
 CardInfoAPI/__pycache__/settings.cpython-311.pyc
 .env
 CardInfoAPI/__pycache__/urls.cpython-311.pyc
+CardInfoAPI/__pycache__/wsgi.cpython-311.pyc
