--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.7.2
+certifi==2023.7.22
 Django==4.2.5
 django-environ==0.11.2
 django-filter==23.2
 djangorestframework==3.14.0
+djangorestframework-jsonapi==6.1.0
 drf-yasg==1.21.7
 inflection==0.5.1
 packaging==23.1
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+sentry-sdk==1.30.0
 sqlparse==0.4.4
 uritemplate==4.1.1
+urllib3==2.0.4
