--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 certifi==2023.7.22
 Django==4.2.5
+django-cors-headers==4.2.0
 django-environ==0.11.2
 django-filter==23.2
 djangorestframework==3.14.0
